--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="title_activity_add_new_beacon">addNewBeacon</string>
     <string name="facebook_app_id">1412054392241141</string>
     <string name="fb_login_protocol_scheme">fb1412054392241141</string>
+    <string name="title_activity_change_group_pic">ChangeGroupPic</string>
+    <string name="title_activity_group_main">GroupMain</string>
 </resources>
